# Lid2LOD

./: .gitignore  .gitmodules  Dockerfile  README.md  entrypoint.sh
CPP1/: CMakeLists.txt  README.md  main.cpp
CPP1/src/: auxiliary.h  buildings.h  city.h  draw_mesh.h  ground.h  merge_mesh_at_coincident_vertices_toll.h  streets.h  triangulate_with_holes.h
CPP1/triangulate_city/: CMakeLists.txt  export.sh  launcher.sh  main.cpp
python1/: Lid2LODpt1.py  requirements.txt
python1_1/: Lid2LODpt1b.py  requirements.txt
python2/: Lid2LODpt2.py
